kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: developer-induction-service
  name: developer-induction-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    name: developer-induction
