kube/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    stable.k8s.psg.io/kcm.class: default
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx-external"
    stable.k8s.psg.io/kcm.provider: http
  name: developer-induction-ingress
spec:
  rules:
    - host: developer-induction.notprod.homeoffice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: developer-induction-service
              servicePort: https
  tls:
    - hosts:
        - developer-induction.notprod.homeoffice.gov.uk
        - www.developer-induction.notprod.homeoffice.gov.uk
      secretName: external-tls
